# volumeicon-qt

./: .gitignore  PKGBUILD  README.md  configure.ac  format-source.sh
doc/: volumeicon.1.pod  volumeicon.5.pod
src/: Makefile.am  alsa_backend.c  alsa_backend.cpp  config.cpp  config.h  volumeicon.cpp
